# ferritin

./: .gitignore  Cargo.toml  Readme.md  justfile
crates/ferritin-bevy/: Cargo.toml
crates/ferritin-bevy/src/: plugin.rs  structure.rs
crates/ferritin-core/: Cargo.toml
crates/ferritin-core/src/: atomcollection.rs  lib.rs
crates/ferritin-core/src/conversions/: pdb.rs
crates/ferritin-core/src/featurize/: mod.rs  structure_features.rs
crates/ferritin-core/src/info/: constants.rs
crates/ferritin-core/src/residue/: info.rs  iterator.rs  mod.rs
crates/ferritin-core/src/selection/: mod.rs  selection.rs  view.rs
crates/ferritin-io/: Cargo.toml
crates/ferritin-io/src/: io.rs
crates/ferritin-io/src/io/: cif.rs  mod.rs
crates/ferritin-molviewspec/: .gitignore  Cargo.toml
crates/ferritin-molviewspec/src/: lib.rs
crates/ferritin-onnx-models/: Cargo.toml
crates/ferritin-plms/: Cargo.toml  Readme.md
crates/ferritin-plms/src/: .gitignore  lib.rs
crates/ferritin-plms/src/amplify/: amplify_runner.rs  rotary.rs
crates/ferritin-plms/src/esm/: pretrained.rs
crates/ferritin-plms/src/ligandmpnn/: Readme.md  model.rs  proteinfeatures.rs
crates/ferritin-plms/tests/: test_ligand_mpnn_loading.rs
crates/ferritin-pymol/: Cargo.toml
crates/ferritin-pymol/binary_test/: pdb_contents.txt
crates/ferritin-pymol/src/: lib.rs
crates/ferritin-pymol/src/pymolparsing/: colors.rs  mod.rs  parsing.rs  psedata.rs
crates/ferritin-pymol/tests/: test_pse_parsing.rs
ferritin-amplify/: Cargo.toml  Readme.md
ferritin-amplify/examples/amplify/: main.rs
ferritin-amplify/src/: cli.rs  lib.rs  main.rs
ferritin-amplify/src/amplify/: amplify.rs  encoder.rs  mod.rs  outputs.rs
ferritin-amplify/tests/: test_amplify_model.rs  test_amplify_vocab.rs  test_cli.rs  test_cli_ligandmpnn.rs
ferritin-bevy/: Cargo.toml  Readme.md
ferritin-bevy/examples/: basic_ballandstick.rs  basic_putty.rs  basic_snapshot.rs  basic_spheres.rs  screenshot.rs
ferritin-bevy/src/: colors.rs  lib.rs  plugin.rs  structure.rs
ferritin-cellscape/: Cargo.toml  Readme.md
ferritin-cellscape/examples/: simple_02.rs
ferritin-cellscape/src/: cellscape.rs  cellscape_bak.rs  lib.rs
ferritin-core/: Cargo.toml
ferritin-core/examples/: ccd.rs
ferritin-core/src/: atomcollection.rs  bonds.rs  lib.rs
ferritin-core/src/conversions/: mod.rs  pdb.rs  pse.rs
ferritin-core/src/core/: atomcollection.rs  bonds.rs  constants.rs  featureizer.rs  mod.rs  test_utilities.rs
ferritin-core/src/core/conversions/: pdb.rs  pse.rs
ferritin-core/src/core/info/: constants.rs  mod.rs
ferritin-core/src/core/residue/: atoms.rs  info.rs  iterator.rs  mod.rs
ferritin-core/src/core/selection/: mod.rs  selector.rs  view.rs
ferritin-core/src/featurize/: candle_impl.rs  mod.rs  ndarray_impl.rs  structure_features.rs  utilities.rs
ferritin-core/src/info/: constants.rs  mod.rs
ferritin-core/src/residue/: atoms.rs  iterator.rs
ferritin-core/src/selection/: selection.rs  selector.rs  view.rs
ferritin-esm/: Cargo.toml  Readme.md
ferritin-esm/examples/esmc/: main.rs
ferritin-esm/src/: lib.rs
ferritin-esm/src/esm/: mod.rs  pretrained.rs
ferritin-esm/src/esm/layers/: attention.rs  blocks.rs  ffn.rs  geom_attention.rs  mod.rs  regression_head.rs  rotary.rs  transformer_stack.rs
ferritin-examples/: Cargo.toml
ferritin-examples/examples/amplify/: Readme.md  main.rs
ferritin-examples/examples/amplify-onnx/: main.rs
ferritin-examples/examples/bevy/: basic_ball_and_stick.rs  basic_putty.rs  basic_snapshot.rs  basic_spheres.rs  mod.rs
ferritin-examples/examples/esm2/: Readme.md  main.rs
ferritin-examples/examples/esm2-onnx/: Readme.md  main.rs
ferritin-examples/examples/esm2-onnx-bak/: main.rs
ferritin-examples/examples/esmc/: main.rs
ferritin-examples/examples/ligandmpnn-onnx/: Readme.md  main.rs
ferritin-featurizers/: Cargo.toml
ferritin-featurizers/examples/amplify/: Readme.md  main.rs
ferritin-featurizers/src/: cli.rs  featureizer.rs  featurizer.rs  lib.rs  main.rs
ferritin-featurizers/src/commands/: featurize.rs  mod.rs  run.rs
ferritin-featurizers/src/models/: mod.rs
ferritin-featurizers/tests/: test_amplify_model.rs  test_amplify_vocab.rs  test_cli.rs  test_cli_ligandmpnn.rs  test_ligand_mpnn_loading.rs
ferritin-ligandmpnn/: .gitignore  Cargo.toml  Readme.md
ferritin-ligandmpnn/src/: lib.rs  main.rs
ferritin-ligandmpnn/src/commands/: featurize.rs  run.rs
ferritin-ligandmpnn/src/ligandmpnn/: configs.rs  mod.rs  model.rs  proteinfeaturesmodel.rs  utilities.rs
ferritin-ligandmpnn/tests/: test_amplify_model.rs  test_amplify_vocab.rs  test_cli.rs  test_ligand_mpnn_loading.rs
ferritin-molviewspec/: Cargo.toml
ferritin-molviewspec/src/: lib.rs
ferritin-molviewspec/src/molviewspec/: nodes.rs
ferritin-molviewspec/tests/: test_molview_spec.rs
ferritin-onnx-models/: Cargo.toml
ferritin-onnx-models/src/: lib.rs  utilities.rs
ferritin-onnx-models/src/models/: mod.rs
ferritin-plms/: Cargo.toml  Readme.md
ferritin-plms/ferritin-esm/: Cargo.toml
ferritin-plms/ferritin-esm/src/: lib.rs
ferritin-plms/ferritin-ligandmpnn/: Cargo.toml
ferritin-plms/ferritin-ligandmpnn/src/: main.rs
ferritin-plms/src/: lib.rs  types.rs
ferritin-plms/src/amplify/: amplify.rs  amplify_runner.rs  config.rs  mod.rs
ferritin-plms/src/esm/: pretrained.rs
ferritin-plms/src/ligandmpnn/: Readme.md  cli.rs  configs.rs  mod.rs  proteinfeatures.rs
ferritin-plms/src/src/: cli.rs
ferritin-plms/tests/: test_cli_ligandmpnn.rs
ferritin-pymol/: Cargo.toml
ferritin-pymol/binary_test/: state.mvsj
ferritin-pymol/examples/: vanc_01.pse
ferritin-pymol/src/: lib.rs  main.rs
ferritin-pymol/src/conversions/: atomcollection.rs  mod.rs
ferritin-pymol/src/pymolparsing/: colors.rs  parsing.rs  psedata.rs  representation.rs
ferritin-pymol/tests/: test_molview_spec.rs  test_pse_parsing.rs
ferritin-pymol/tests/data/: example.json
ferritin-wasm-examples/amplify/: Cargo.toml  Readme.md  amplifyWorker.js  build-lib.sh  lib-example.html  utils.js
ferritin-wasm-examples/amplify/src/: lib.rs
(+155 files in other folders)
