[workspace]
members = [
    "crates/ferritin-bevy",
    "crates/ferritin-cellscape",
    "crates/ferritin-core",
    "crates/ferritin-examples",
    "crates/ferritin-molviewspec",
    "crates/ferritin-onnx-models",
    "crates/ferritin-plms",
    "crates/ferritin-pymol",
    "crates/ferritin-test-data",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Zach Charlop-Powers<zach.charlop.powers@gmail.com>"]
description = "Molecular visualization tools"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
bevy = "0.15.1"
bon = "3.3.2"
geo = "0.29.3"
svg = "0.18.0"
clap = { version = "4.5.23", features = ["derive"] }
lazy_static = "1.5.0"
chrono = "0.4.39"
validator = { version = "0.19.0", features = ["derive"] }
urlencoding = "2.1.3"
ndarray = "0.16"
ndarray-safetensors = "0.2.1"
ort = "=2.0.0-rc.9"
serde-pickle = "1.2"
tempfile = "3.15.0"
strum = { version = "0.26", features = ["derive"] }
anyhow = "1.0"
bitflags = "2.6.0"
candle-core = "0.8.1"
candle-examples = "0.8.1"
candle-metal-kernels = "0.8.1"
candle-nn = "0.8.1"
candle-onnx = "0.8.1"
candle-transformers = "0.8.1"
hf-hub = "0.4.1"
itertools = "0.14.0"
once_cell = "1.20.2"
pdbtbx = "0.12.0"
rand = "0.8.5"
safetensors = "0.4.5"
serde_bytes = "0.11.15"
serde_json = "1.0.135"
serde_repr = "0.1.19"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokenizers]
version = "0.21.0"
default-features = false
