[workspace]
members = [
    "crates/ferritin-bevy",
    "crates/ferritin-cellscape",
    "crates/ferritin-core",
    "crates/ferritin-examples",
    "crates/ferritin-io",
    "crates/ferritin-molviewspec",
    "crates/ferritin-onnx-models",
    "crates/ferritin-plms",
    "crates/ferritin-pymol",
    "crates/ferritin-test-data",
]
resolver = "2"

[workspace.package]
version = "0.2.0-dev"
authors = ["Zach Charlop-Powers<zach.charlop.powers@gmail.com>"]
description = "Protein Manipulaton and visualization tools"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bevy = "0.15.1"
bitflags = "2.8.0"
bon = "3.3.2"
candle-core = "0.8.2"
candle-examples = "0.8.1"
candle-metal-kernels = "0.8.2"
candle-nn = "0.8.2"
candle-onnx = "0.8.2"
candle-transformers = "0.8.2"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
geo = "0.29.3"
hf-hub = "0.4.1"
itertools = "0.14.0"
memchr = "2.7.4"
ndarray = "0.16"
ndarray-safetensors = "0.2.2"
# once_cell = "1.20.2"
ort = "=2.0.0-rc.9"
polars = { version = "0.45.1", features = ["csv", "polars-io"] }
pdbtbx = "0.12.0"
rand = "0.8.5"
safetensors = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.2"
serde_bytes = "0.11.15"
serde_json = "1.0.137"
serde_repr = "0.1.19"
strum = { version = "0.26", features = ["derive"] }
svg = "0.18.0"
tempfile = "3.15.0"
tokenizers = { version = "0.21.0", default-features = false }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
