[package]
name = "ferritin-amplify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-metal-kernels",
]

[dependencies]
anyhow.workspace = true
candle-core = { git = "https://github.com/huggingface/candle.git", package = "candle-core", features = [
] }
candle-hf-hub = "0.3.3"
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn" }
ferritin-test-data = { path = "../ferritin-test-data" }
rand = "0.8.5"
safetensors = "0.4.5"
tokenizers = "0.21.0"

[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", package = "candle-metal-kernels", optional = true }

[dev-dependencies]
candle-examples = { git = "https://github.com/huggingface/candle.git", package = "candle-examples" }
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
