[package]
name = "ferritin-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
bevy = "=0.15.0-rc.3"
bon = "3.0.0"
ferritin-core = { path = "../ferritin-core" }
pdbtbx.workspace = true

[dev-dependencies]
