[package]
name = "ferritin-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
bevy = "0.15.0"
bon = "3.2.0"
ferritin-core = { path = "../ferritin-core" }
pdbtbx.workspace = true

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
