[package]
name = "ferritin-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
bevy = "0.15.1"
bon = "3.3.2"
ferritin-core = { path = "../ferritin-core" }
pdbtbx.workspace = true

[dev-dependencies]
anyhow.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
