[package]
name = "ferritin-cellscape"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
chrono = "0.4.38"
validator = { version = "0.18", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
geo = "0.29.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
plotters = "0.3.7"

[dev.dependencies]
ferritin-pymol = { path = "../ferritin-pymol" }
