[package]
name = "ferritin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
candle-core.workspace = true
itertools.workspace = true
lazy_static = "1.5.0"
pdbtbx.workspace = true
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
