[package]
name = "ferritin-esm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-hf-hub.workspace = true
candle-nn.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
rand.workspace = true
safetensors.workspace = true
tokenizers.workspace = true
candle-metal-kernels = { workspace = true, optional = true }


[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels.workspace = true

[dev-dependencies]
candle-examples.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
