[package]
name = "ferritin-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
rand.workspace = true
safetensors.workspace = true

[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", package = "candle-metal-kernels", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.21.0", default-features = false, features = [
    "unstable_wasm",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
candle-hf-hub = { workspace = true }
tokenizers = { version = "0.21.0" }  # full features for non-wasm


[dev-dependencies]
candle-examples.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
