[package]
name = "ferritin-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-metal-kernels"]

[dependencies]
anyhow.workspace = true
bevy = "0.15.0"
candle-core.workspace = true
candle-metal-kernels = { workspace = true, optional = true }
candle-nn.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
ferritin-plms = { path = "../ferritin-plms/" }
serde_json.workspace = true
ort = "=2.0.0-rc.9"
ndarray = "0.16.1"
rand.workspace = true


[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokenizers = { version = "0.21.0", default-features = false, features = [
    "unstable_wasm",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
candle-hf-hub = { workspace = true }
tokenizers = { version = "0.21.0" }  # full features for non-wasm


[dev-dependencies]
candle-examples.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"


[[example]]
name = "bevy_basic_ball_and_stick"
path = "examples/bevy/basic_ball_and_stick.rs"


[[example]]
name = "bevy_basic_putty"
path = "examples/bevy/basic_putty.rs"

[[example]]
name = "bevy_basic_snapshot"
path = "examples/bevy/basic_snapshot.rs"

[[example]]
name = "bevy_basic_spheres"
path = "examples/bevy/basic_spheres.rs"

[[example]]
name = "bevy_screenshot"
path = "examples/bevy/screenshot.rs"
