[package]
name = "ferritin-featurizers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
# candle-core = { git = "https://github.com/zachcp/candle.git", branch = "20241130-metal-dep-bump", features = ["metal"] }
candle-core = { version = "0.8", features = ["metal"] }
candle-hf-hub = "0.3.3"
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = "0.8.0"
clap = "4.5.21"
ferritin-core = { path = "../ferritin-core" }
itertools.workspace = true
pdbtbx.workspace = true
rand = "0.8.5"
safetensors = "0.4.5"
strum = { version = "0.26", features = ["derive"] }
tokenizers = "0.21.0"
ferritin-test-data = { path = "../ferritin-test-data" }


[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
candle-hf-hub = "0.3.3"
