[package]
name = "ferritin-featurizers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true

# Use conditional features instead of separate dependency blocks
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn", features = [
    "metal",
] }
candle-core = { git = "https://github.com/huggingface/candle.git", package = "candle-core", features = [
    "metal",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers", features = [
    "metal",
] }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", package = "candle-metal-kernels", optional = true }

# Rest of your dependencies
candle-hf-hub = "0.3.3"
clap = "4.5.21"
ferritin-core = { path = "../ferritin-core" }
itertools.workspace = true
pdbtbx.workspace = true
rand = "0.8.5"
safetensors = "0.4.5"
strum = { version = "0.26", features = ["derive"] }
tokenizers = "0.21.0"
ferritin-test-data = { path = "../ferritin-test-data" }

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
candle-hf-hub = "0.3.3"
