[package]
name = "ferritin-featurizers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[features]
metal = [
    "candle-core/metal",         # Enable the 'metal' feature for candle-core
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-metal-kernels",
]

[dependencies]
anyhow.workspace = true

# Always include candle-core, but conditionally enable its metal feature
candle-core = { git = "https://github.com/huggingface/candle.git", package = "candle-core", features = [
] }
candle-hf-hub = "0.3.3"
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers" }
clap = "4.5.21"
ferritin-core = { path = "../ferritin-core" }
ferritin-test-data = { path = "../ferritin-test-data" }
itertools.workspace = true
pdbtbx.workspace = true
rand = "0.8.5"
safetensors = "0.4.5"
strum = { version = "0.26", features = ["derive"] }
tokenizers = "0.21.0"

# Conditionally include Metal-related dependencies for macOS
[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", package = "candle-metal-kernels", optional = true }


[dev-dependencies]
candle-examples = { git = "https://github.com/huggingface/candle.git", package = "candle-examples" }
ferritin-test-data = { path = "../ferritin-test-data" }
assert_cmd = "2.0.16"
tempfile = "3.14.0"
candle-hf-hub = "0.3.3"
