[package]
name = "ferritin-molviewspec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
chrono = "0.4.38"
validator = { version = "0.18", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }

[dev.dependencies]
ferritin-pymol = { path = "../ferritin-pymol" }
