[package]
name = "ferritin-onnx-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-hf-hub.wokspace = true
ndarray-safetensors = "0.2.0"
ort = "=2.0.0-rc.9"
safetensors.workspace = true
tokenizers.workspace = true
ferritin-core = { path = "../ferritin-core" }

[dev-dependencies]
anyhow.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
