[package]
name = "ferritin-pymol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ferritin-core = { path = "../ferritin-core" }
clap = { workspace = true }
serde-pickle = { workspace = true }
serde_bytes = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
urlencoding = { workspace = true }
serde_repr = { workspace = true }
once_cell = { workspace = true }
bitflags = { workspace = true }
