[package]
name = "ferritin-pymol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ferritin-molviewspec = { path = "../ferritin-molviewspec" }
clap = { version = "4.5.20", features = ["derive"] }
serde-pickle = "1.1"
serde_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
once_cell = { workspace = true }
bitflags = { workspace = true }
pdbtbx.workspace = true
itertools.workspace = true

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
