[package]
name = "ferritin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
candle-core.workspace = true
itertools.workspace = true
lazy_static.workspace = true
pdbtbx.workspace = true
strum.workspace = true

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
