[package]
name = "ferritin-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
memchr.workspace = true
polars.workspace = true


[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
