[package]
name = "ferritin-molviewspec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
chrono.workspace = true
validator.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding.workspace = true

[dev.dependencies]
ferritin-pymol = { path = "../ferritin-pymol" }
