[package]
name = "ferritin-onnx-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
ndarray.workspace = true
ndarray-safetensors.workspace = true
ort.workspace = true
safetensors.workspace = true
serde.workspace = true
tokenizers.workspace = true
ferritin-core = { path = "../ferritin-core" }
ferritin-plms = { path = "../ferritin-plms" }

[dev-dependencies]
anyhow.workspace = true
ferritin-test-data = { path = "../ferritin-test-data" }
pdbtbx.workspace = true
