[package]
name = "ferritin-plms"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true


[features]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "candle-metal-kernels",
]

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
candle-metal-kernels = { workspace = true, optional = true }
candle-nn.workspace = true
candle-transformers.workspace = true
clap.workspace = true
ferritin-core = { path = "../ferritin-core" }
ferritin-test-data = { path = "../ferritin-test-data" }
hf-hub.workspace = true
itertools.workspace = true
pdbtbx.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum .workspace = true
tokenizers.workspace = true


[target.'cfg(target_os = "macos")'.features]
metal = []

[target.'cfg(target_os = "macos")'.dependencies]
candle-metal-kernels.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
ferritin-test-data = { path = "../ferritin-test-data" }
tempfile.workspace = true
