[package]
name = "ferritin-pymol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ferritin-core = { path = "../ferritin-core" }
ferritin-molviewspec = { path = "../ferritin-molviewspec" }
clap.workspace = true
serde-pickle.workspace = true
serde_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
bitflags = { workspace = true }
pdbtbx.workspace = true
itertools.workspace = true

[dev-dependencies]
ferritin-test-data = { path = "../ferritin-test-data" }
