[package]
name = "ferritin-wasm-example-amplify"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true, default-features = false, features = [
    "unstable_wasm",
] }
ferritin-plms = { path = "../../ferritin-plms/" }

# for wasm
gloo = "0.11.0"
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"
serde_json.workspace = true
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }


# [lib]
# crate-type = ["cdylib", "rlib"]
